<resources>
    <string name="app_name">LiteWeight</string>
    <string name="no_workouts_found">No workouts found. Click the button below to create one and get lifting!</string>
    <string name="nav_draw_open">Open Nav</string>
    <string name="nav_draw_close">Close Nav</string>
    <string name="workout_name_title">Workout Name</string>
    <string name="empty_workout_day">No exercises for this day</string>
    <string name="unsaved_workout_msg">You have a workout currently being created. If you quit now, all progress
    will be lost!\n\nAre you sure you wish to quit?</string>
    <string name="popup_message_edit_workout">You have a workout currently being edited. If you quit now, all progress
    will be lost!\n\nAre you sure you wish to quit?</string>
    <string name="video_switch_description">Provides a play button next to each exercise in the current workout page that, when
    clicked, launches a video using the provided URL for the specific exercise.</string>
    <string name="metric_switch_description">Converts all units from imperial units (lb) to metric units (kg).</string>
    <string name="stopwatch_switch_description">Provides a stopwatch at the bottom of the current workout page.</string>
    <string name="timer_switch_description">Provides a timer at the bottom of the current workout page.</string>
    <string name="save">SAVE</string>
    <string name="select_focus_title">Select Focuses</string>
    <string name="url_hint">Video URL (Leave empty for none)</string>
    <string name="name_hint">Exercise Name</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="none">None</string>
    <string name="video_switch">Videos</string>
    <string name="stopwatch_switch">Stopwatch</string>
    <string name="timer_switch">Timer</string>
    <string name="set_timer">Set Duration</string>
    <string name="focus_label">Focus</string>
    <string name="focuses">Focuses</string>
    <string name="workouts">Workouts</string>
    <string name="version_number">Version </string>
    <string name="exercise_not_found">Exercise not found.</string>
    <string name="search_exercise_hint">Search exercise…</string>
    <string name="my_exercises">My Exercises</string>
    <string name="exercise_label">Exercise</string>
    <string name="workout_list_title">Select to switch current workout</string>
    <string name="nav_workout_icon_title">Current Workout</string>
    <string name="nav_list_icon_title">My Workouts</string>
    <string name="nav_user_settings">App Settings</string>
    <string name="default_sets_hint">Default Sets</string>
    <string name="default_reps_hint">Default Reps</string>
    <string name="default_details_hint">Default Details</string>
    <string name="nav_about">About</string>
    <string name="workout_progress">Workout Progress</string>
    <string name="restart_msg">Do you wish to restart this workout?\n\nIf so, you will be taken back
    to the first day of the workout with all exercises unchecked.
        \n\nThe statistics for this workout will be updated using the current workout progress.</string>
    <string name="start_button">START</string>
    <string name="stop_button">STOP</string>
    <string name="reset">RESET</string>
    <string name="show_stopwatch">STOPWATCH</string>
    <string name="show_timer">TIMER</string>
    <string name="timer_title"><u>Timer</u></string>
    <string name="stopwatch_title"><u>Stopwatch</u></string>
    <string name="minutes_title">Minutes</string>
    <string name="seconds_title">Seconds</string>
    <string name="add_exercises">ADD EXERCISES</string>
    <string name="username_and_email_hint"><i>Username or Email</i></string>
    <string name="username_hint"><i>Username</i></string>
    <string name="password_hint"><i>Password</i></string>
    <string name="password_confirm_hint"><i>Confirm Password</i></string>
    <string name="email_hint"><i>Email</i></string>
    <string name="display_name_hint"><i>Display Name</i></string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="password_length_msg">Must have at least 8 characters.</string>
    <string name="acknowledgements_title">Acknowledgements</string>
    <string name="acknowledgements">App Logo uses free SVG found <a href="https://uxwing.com/feather-icon/">here</a>.
        \n\nDefault Profile Picture was created by <a href="https://www.flaticon.com/free-icon/user_149071">Smashicons</a>.
    </string>
    <string name="max_reached_msg">MAX REACHED</string>
    <string name="add_week_msg">ADD WEEK</string>
    <string name="add_day_msg">ADD DAY</string>
    <string name="remove_day_msg">DELETE DAY</string>
    <string name="remove_week_msg">DELETE WEEK</string>
    <string name="remove_week_warning_msg">Are you sure you wish to delete this week?\n\nDoing so will delete ALL days associated with this week, and this action cannot be reversed.</string>
    <string name="remove_day_warning_msg">Are you sure you wish to delete day?\n\nDoing so will delete ALL exercises associated with this day, and this action cannot be reversed.</string>
    <string name="done_msg">DONE</string>
    <string name="add_radio_msg">Add</string>
    <string name="delete_radio_msg">Delete</string>
    <string name="copy_msg">Copy</string>
    <string name="copy_day_msg">COPY DAY</string>
    <string name="copy_week_msg">COPY WEEK</string>
    <string name="default_weight_help_msg">The default weight of this exercise is the weight that will be defaulted to whenever you add this exercise to a new workout or existing one.
        \n\nChanging this value will NOT update any weights in existing workouts. To do that, you would have to edit the workout and edit the specific instances of this exercise with the desired weight.
        \n\nIf enabled in your user settings, this default weight will automatically get updated upon saving or restarting a workout whenever the weight in that workout is higher than the current default weight.
    </string>
    <string name="default_sets_reps_help_msg">Reps is short for “repetitions” and is the number of times you complete an exercise in a single cycle. This cycle is called a “set”. The default sets and reps are the values that will be defaulted to whenever you add this exercise to a new workout or existing one.
        \n\nChanging these values will NOT update any sets/reps in existing workouts. To do that, you would have to edit the workout and edit the specific instances of this exercise with the desired sets/reps.
    </string>
    <string name="default_details_help_msg">
        Details are short messages that you can leave for specific exercises to aide in tracking your workouts. Perhaps you may wish to leave a detail that says to only do this exercise with free weights, or only to do this exercise outside. The possibilities are endless.
        \n\nChanging this value will NOT update this exercise\'s details in existing workouts. To do that, you would have to edit the workout and edit the specific instances of this exercise with the desired details.
    </string>
    <string name="empty_friend_list_msg">You do not yet have any friends added. Click the button below to add some!</string>
    <string name="empty_friends_request_msg">You do not have any pending requests.</string>
    <string name="back_to_sign_in">BACK TO SIGN IN</string>
    <string name="log_out">Log Out</string>
    <string name="reset_password_msg">Please enter the username or email for the account whose password that you wish to reset. A code will be sent to the email associated with that account.</string>
    <string name="send_code">SEND CODE</string>
    <string name="reset_password_btn_msg">RESET PASSWORD</string>
    <string name="friends_list">Friends List</string>
    <string name="blocked_list">Blocked List</string>
    <string name="account_preferences">Account Preferences</string>
    <string name="received_workouts">Received Workouts</string>
    <string name="friends_list_alert">Friends List (!)</string>
    <string name="manage_notifications">Manage Notifications</string>
    <string name="empty_blocked_list_msg">You are not blocking any users. To block a user click the plus button below.</string>
    <string name="create">Create</string>
    <string name="received_workouts_alert">Received Workouts (!)</string>
    <string name="workout_progress_description">Displays a progress bar in your current workout page showing the percentage of exercises completed in the workout.</string>
    <string name="app_purpose">
        LiteWeight is used for creating and tracking custom workouts. The “Current Workout” tab is the tab that contains the workout that you are currently working on. As you cycle through the days you can track which exercises you completed and what weight you used. Whenever you are ready you can restart the workout to be brought back to day one with all exercises ready to be completed again! After you create a workout you can then share it to any other LiteWeight user.
    </string>
    <string name="restart_workout_explanation">At this time, you are not able to previous states of workouts. Previous progress can be inferred from the average completion percentage of the workout.</string>
    <string name="share_workout_explanation">When you share a workout to another user, it makes a copy of the workout at the time of you sharing it. Thus, any changes you make will not be reflected in the copy you sent them. You must send it again for them to get the updated changes.</string>
    <string name="default_explanation">Whenever you create a new workout or add exercises to an existing workout, the exercises will take the value of the default values specified for that exercise. Changing the values of an exercise, (i.e. weight, sets, reps, details), when they are in a workout will NOT update the default values.\n\nThe only default field that can change from changing it in an existing or new workout is weight. If enabled in your user settings, this default weight will automatically get updated upon saving or restarting a workout whenever the weight in that workout is higher than the current default weight.</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_msg">Use this form to send any feedback you have about the app. Be it concerns, bugs, or success stories!</string>
    <string name="unblock_user">Unblock user</string>
    <string name="block_friend">Block Friend</string>
    <string name="cancel_friend_request">Cancel Friend Request</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="share_a_workout">Share a workout</string>
    <string name="browse_workout">Browse Workout</string>
    <string name="block_user">Block User</string>
    <string name="confirm_msg">Please enter the code sent to your email.</string>
    <string name="email_verification_code_hint">Email Verification Code</string>
    <string name="confirm">CONFIRM</string>
    <string name="resend_code">RESEND CODE</string>
    <string name="metric">Metric</string>
    <string name="private_account">Private Account</string>
    <string name="private_account_description">Prevents users not on your friend\'s list from sending you friend requests or workouts.</string>
    <string name="update_default_weight_on_restart">Update Default Weight on Restart</string>
    <string name="update_default_weight_on_restart_description">Upon restarting a workout, completed exercises will have their default weights updated if the weight of the completed exercise is higher than its current default.</string>
    <string name="update_default_weight_on_save">Update Default Weight on Save</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="new_indicator">(NEW)</string>
    <string name="block">BLOCK</string>
</resources>