<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_current_workout"
                android:icon="@drawable/active_workout_icon"
                android:title="@string/nav_workout_icon_title" />
        <item
                android:id="@+id/nav_my_workouts"
                android:icon="@drawable/my_workouts_icon"
                android:title="@string/nav_list_icon_title" />
        <item
                android:id="@+id/nav_my_exercises"
                android:icon="@drawable/weight_icon"
                android:title="@string/my_exercises" />

        <item
                android:id="@+id/nav_received_workouts"
                android:icon="@drawable/email_icon"
                android:title="@string/received_workouts"
                app:actionLayout="@layout/menu_counter" />
    </group>
    <group
            android:id="@+id/unique-id-5487653"
            android:checkableBehavior="single">
        <item
                android:id="@+id/nav_my_account"
                android:icon="@drawable/my_account_icon"
                android:title="@string/my_account" />

        <item
                android:id="@+id/nav_friends_list"
                android:icon="@drawable/friends_icon"
                android:title="@string/nav_friends_list"
                app:actionLayout="@layout/menu_counter" />
        <item
                android:id="@+id/nav_about"
                android:icon="@drawable/about_icon"
                android:title="@string/nav_about" />
    </group>

</menu>