<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="00:00"
            android:textSize="36sp" />

    <TextView
            android:id="@+id/set_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/timer"
            android:layout_centerHorizontal="true"
            android:text="@string/set_timer"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent" />

    <LinearLayout
            android:id="@+id/timer_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/set_time_tv"
            android:layout_centerHorizontal="true"
            android:animateLayoutChanges="true"
            android:orientation="horizontal">

        <Button
                android:id="@+id/start_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_button" />

        <Button
                android:id="@+id/stop_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_button" />

        <Button
                android:id="@+id/reset_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset" />

        <Button
                android:id="@+id/show_stopwatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_stopwatch"
                android:visibility="gone"
                tools:visibility="visible" />
    </LinearLayout>
</RelativeLayout>