<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Chronometer
            android:id="@+id/stopwatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="36sp" />

    <!--    Required to prevent jarring height change between timer and stopwatch-->
    <TextView
            android:id="@+id/placeholder_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/stopwatch"
            android:visibility="invisible" />

    <LinearLayout
            android:id="@+id/stopwatch_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/placeholder_tv"
            android:layout_centerHorizontal="true"
            android:animateLayoutChanges="true"
            android:orientation="horizontal">

        <Button
                android:id="@+id/start_stopwatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_button" />

        <Button
                android:id="@+id/stop_stopwatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_button" />

        <Button
                android:id="@+id/reset_stopwatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset" />

        <Button
                android:id="@+id/show_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_timer"
                tools:visibility="visible" />
    </LinearLayout>

</RelativeLayout>