<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                    android:id="@+id/stopwatch_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bottom_border_selectable"
                    android:clickable="true"
                    android:descendantFocusability="blocksDescendants"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:padding="16dp">

                <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/stopwatch_switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:text="@string/stopwatch_switch"
                        android:textSize="16sp"
                        tools:checked="true" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/stopwatch_switch_description" />
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/timer_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bottom_border_selectable"
                    android:clickable="true"
                    android:descendantFocusability="blocksDescendants"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:padding="16dp">

                <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/timer_switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:text="@string/timer_switch"
                        android:textSize="16sp"
                        tools:checked="true" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/timer_switch_description" />
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/video_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bottom_border_selectable"
                    android:clickable="true"
                    android:descendantFocusability="blocksDescendants"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:padding="16dp">

                <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/video_switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:text="@string/video_switch"
                        android:textSize="16sp"
                        tools:checked="true" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/video_switch_description" />
            </LinearLayout>

            <TextView
                    android:id="@+id/manage_notifications_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bottom_border_selectable"
                    android:clickable="true"
                    android:descendantFocusability="blocksDescendants"
                    android:focusable="true"
                    android:padding="16dp"
                    android:text="@string/manage_notifications"
                    android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>