<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_border_selectable">

    <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/profile_picture"
            android:orientation="vertical">

        <TextView
                android:id="@+id/username_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textSize="20sp"
                tools:text="TextView" />

        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <Button
                    android:id="@+id/accept_request_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/accept" />

            <Button
                    android:id="@+id/decline_request_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/accept_request_btn"
                    android:text="@string/decline"
                    app:backgroundTint="@color/deny_color" />

            <Button
                    android:id="@+id/block_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/decline_request_btn"
                    android:text="@string/block"
                    app:backgroundTint="@color/deny_color" />
        </RelativeLayout>

        <TextView
                android:id="@+id/unseen_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_indicator"
                android:textSize="20sp"
                tools:text="(New)" />
    </LinearLayout>
</RelativeLayout>