<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/sign_up_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:background="@drawable/login_gradient">

    <TextView
            android:id="@+id/sign_up_app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/roboto"
            android:text="@string/app_name"
            android:textSize="36sp"
            android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_email_input_layout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sign_up_app_title"
            android:layout_centerHorizontal="true"
            android:hint="@string/email_hint">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_email_input"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:drawableStart="@drawable/email_icon"
                android:drawablePadding="5dp"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@null" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_username_input_layout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sign_up_email_input_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:hint="@string/username_hint">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_username_input"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:drawableStart="@drawable/user_icon_login"
                android:drawablePadding="5dp"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_password_input_layout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sign_up_username_input_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:hint="@string/password_hint"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_password_input"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:drawableStart="@drawable/password_icon"
                android:drawablePadding="5dp"
                android:inputType="textPassword"
                android:longClickable="false"
                android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:id="@+id/sign_up_password_attributes_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sign_up_password_input_layout"
            android:layout_alignStart="@+id/sign_up_password_input_layout"
            android:layout_alignEnd="@+id/sign_up_password_input_layout"
            android:fontFamily="@font/roboto"
            android:textColor="@color/password_constraint_unsuccessful_match"
            android:textStyle="bold"
            android:visibility="gone"
            tools:text="@string/password_length_msg"
            tools:visibility="visible" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_password_confirm_layout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sign_up_password_attributes_tv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:hint="@string/password_confirm_hint"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_password_input_confirm"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:drawableStart="@drawable/password_icon"
                android:drawablePadding="5dp"
                android:inputType="textPassword"
                android:longClickable="false"
                android:textCursorDrawable="@null"
                android:visibility="visible" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/sign_up_primary_btn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_up_password_confirm_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="#50000000"
            android:foreground="?android:selectableItemBackground"
            android:text="@string/sign_up" />

    <View
            android:id="@+id/divider"
            android:layout_width="300dp"
            android:layout_height="2dp"
            android:layout_below="@id/sign_up_primary_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="#c0c0c0" />

    <Button
            android:id="@+id/sign_up_change_mode_btn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="#50000000"
            android:foreground="?android:selectableItemBackground"
            android:text="@string/back_to_sign_in" />
</RelativeLayout>